# public/swagger.json
@@ -75,7 +75,33 @@ paths:
             $ref: "#/definitions/Token"
         404:
           description: "User not found"
-         
+  /v1/users/timesheets:
+    post:
+      tags:
+      - "Timesheets"
+      security:
+      - auth: []
+      summary: "Create timesheet"
+      operationId: "createTimesheet"
+      produces:
+      - "application/json"
+      parameters:
+        - in: "body"
+          name: "body"
+          description: "Create a user timesheet"
+          required: true
+          schema:
+            $ref: "#/definitions/TimesheetInput"
+      responses:
+        200:
+          description: "successful operation"
+          schema:
+            $ref: "#/definitions/TimesheetModel"
+        400:
+          description: "Bad Request"
+        401:
+          description: "Unauthorized"
+ 
 definitions:
   Auth:
     properties:
@@ -107,6 +133,55 @@ definitions:
             type: "string"
             example: "test12345"
       type: object
+  TimesheetModel:
+    properties:
+      id:
+        type: "integer"
+        format: "int64"
+      user_id:
+        type: "integer"
+        format: "int64"
+      name:
+        type: "string"
+      description:
+        type: "string"
+      search_keywords:
+        type: "string"
+      status:
+        type: "string"
+        enum: ["IN_PROGRESS", "COMPLETED"]
+      total_days_to_complete_timesheet:
+        type: "number"
+      created_at:
+        type: "string"
+      updated_at:
+        type: "string"
+      deleted_at:
+        type: "string"
+    type: object
+  TimesheetInput:
+    properties:
+      name:
+        type: "string"
+        example: "Nodejs studies"
+      description:
+        type: "string"
+        example: "Studies regarding nodejs best practices."
+      search_keywords:
+        type: "string"
+        example: "best practices nodejs"
+      available_minutes_per_day:
+        type: "array"
+        example: [15, 120, 30, 150, 20, 40, 90]
+        items:
+          type: "number"
+        minItems: 7
+        maxItems: 7
+    required:
+      - name
+      - search_keywords
+      - available_minutes_per_day
+    type: object
   User:
     properties:
       id:
